# Back-Note

./: .dockerignore  Dockerfile  Home.py  README-Docker.md  README.md  docker-compose.prod.yml  docker-compose.yml  full_prompt_for_quiz.json  full_prompt_in_submit_note.txt  gemini_quiz.txt  gemini_summary.txt  locales.py  main.py  main_test_restult.txt  my_app_database.db  nginx.conf  pyproject.toml  pytest.ini  quiz_with_answers.json  result_for_note.json  result_for_quiz.json  result_for_quiz.txt  result_in_submit_note.txt  test.py
core/: __init__.py  api_retry_handler.py  gemini_work.py  note_data_processor.py  note_prompt_builder.py  note_result_validator.py  quiz_prompt_builder.py  quiz_result_validator.py  submit_note.py  submit_quiz.py  text_cleaner.py
data/: my_app_database.db
pages_english/: app.py  controller.py  home.py  my_db.py  new_note.py
pages_english/views/: home_view.py  new_note_view.py  note_detail_view.py  note_list_view.py
pages_korean/: home.py  my_db.py  new_note.py
repositories/: api_key_repository.py  grading_repository.py  my_db.py  note_hashtag_repository.py  note_repository.py  option_repository.py  question_repository.py  summary_repository.py
scripts/: start.sh
tests/: conftest.py  main_test.py
tests/core_tests/: test_api_retry_handler.py  test_note_data_processor.py  test_note_prompt_builder.py  test_note_result_validator.py  test_quiz_prompt_builder.py  test_quiz_result_validator.py  test_text_cleaner.py
tests/repository_tests/: test_api_key_repository.py  test_grading_repository.py  test_my_db.py  test_note_repository.py  (+4 more)
