[project]
name = "back-note"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google>=3.0.0",
    "google-api-core>=2.25.1",
    "google-genai>=1.28.0",
    "st-flexible-callout-elements>=0.2.1",
    "streamlit>=1.47.1",
    "streamlit-option-menu>=0.4.0",
    "streamlit-tags>=1.2.8",
]
